# yapi.rs

./: .env  .env.sample  .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
api/src/routers/: group.rs  interface.rs  mod.rs  project.rs  user.rs
client/: .editorconfig  package.json  pnpm-lock.yaml
client/src/: App.tsx  Contex.tsx  main.tsx
client/src/api/: index.ts  user.ts
client/src/components/: ProtectedRoute.tsx
client/src/components/Footer/: Footer.tsx
client/src/components/LogoSVG/: index.tsx
client/src/components/iconfont/: index.tsx
client/src/containers/Group/GroupList/: GroupList.tsx
client/src/containers/Home/: Home.tsx
client/src/containers/Login/: LoginContailer.tsx  LoginWrap.tsx  Reg.tsx  login.tsx
client/src/styles/: common.scss
client/src/types/: AddMember.ts  AddMemberResult.ts  AuthUserInfo.ts  ChangeMemberRole.ts  DeleteMember.ts  DeleteResult.ts  GetById.ts  GroupAdd.ts  GroupInfo.ts  GroupUp.ts  GroupWithMember.ts  IndexItem.ts  InterfaceAdd.ts  InterfaceCat.ts  InterfaceCatAdd.ts  InterfaceCatUp.ts  InterfaceDetail.ts  InterfaceInfo.ts  InterfaceList.ts  InterfaceMenu.ts  InterfaceUp.ts  List.ts  MemberInfo.ts  NameValue.ts  PageList.ts  ProjectAdd.ts  ProjectDetail.ts  ProjectEnv.ts  ProjectInfo.ts  ProjectItem.ts  ProjectList.ts  ProjectUp.ts  ReqBodyForm.ts  ReqHeader.ts  ReqParam.ts  ReqQuery.ts  Search.ts  UpdateResult.ts  UserInfo.ts  UserList.ts  (+3 more)
common/: Cargo.toml
common/src/: lib.rs
common/src/traits/: mod.rs
common/src/types/: group.rs  interface.rs  mod.rs  project.rs  role_permission.rs  user.rs
common/src/utils/: mod.rs  validator.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  res.rs
core/src/extractors/: auth.rs  json.rs  mod.rs
core/src/services/: base.rs  group_service.rs  interface_cat_service.rs  interface_service.rs  mod.rs  project_service.rs  user_service.rs
core/src/types/: user.rs
doc/api/: group_add.md  group_add_member.md  group_change_member_role.md  group_del.md  group_del_member.md  group_get.md  group_get_member_list.md  group_get_mygroup.md  group_list.md  group_up.md  interface_add.md  interface_add_cat.md  interface_del.md  interface_del_cat.md  interface_get.md  interface_list.md  interface_list_cat.md  interface_list_menu.md  interface_up.md  interface_up_cat.md  interface_up_cat_index.md  interface_up_index.md  project_add.md  project_add_member.md  project_change_member_role.md  project_del.md  project_del_member.md  project_get.md  project_get_member_list.md  project_list.md  project_up.md  user_change_password.md  user_del.md  user_list.md  user_login.md  user_logout.md  user_register.md  user_search.md  user_status.md  user_update.md
entity/: Cargo.toml
entity/src/: base.rs  group.rs  group_member.rs  interface.rs  interface_cat.rs  lib.rs  project.rs  project_env.rs  project_member.rs  user.rs
entity/src/macros/: mod.rs
entity/src/models/: base.rs  group.rs  group_member.rs  interface.rs  interface_cat.rs  mod.rs  project.rs  project_env.rs  project_member.rs  user.rs
entity/src/traits/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  main.rs  setup_tables.rs
src/: main.rs
