[package]
name = "yapi-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yapi-common = { path = "../common" }
yapi-core = { path = "../core"}
futures = "0.3"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.5.17", features = ["tower-log"] }
log = "0.4"
anyhow = "1.0"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"