[package]
name = "yapi-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yapi-common = { path = "../common" }
yapi-entity = { path = "../entity" }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
http-body = "0.4"
tower = "0.4"
axum = { version = "0.5.17", features = ["tower-log"] }
log = "0.4"
clap = { version = "4.0.18", features = ["derive", "env"] }
argon2 = "0.4.1"
rand = "0.8.5"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1"
time = "0.3"

jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"