[package]
name = "yapi-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yapi-common = { path = "../common" }
yapi-macros = { path = "../macros" }
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
time = "0.3"
syn = "1.0"
quote = "1.0"